--- a/main.html
+++ b/main.html
@@ -1,16 +1,47 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <title>Inception - Movie Webpage</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <header>
+        Inception
+    </header>
+    <nav>
+        <a href="#actor" id="nav-actor">Actors</a>
+        <a href="#quote" id="nav-quote">Quotes</a>
+    </nav>
+    <main>
+        <div class="content">
+            <summary>
+                A thief with the rare ability to enter people's dreams and steal their secrets gets a chance at redemption when he's offered a seemingly impossible task: plant an idea into someone’s mind. As he gathers his team and the layers of dreams deepen, the boundaries between reality and fantasy blur.
+            </summary>
+            <section id="actor">
+                <h2>Actors</h2>
+                <ul>
+                    <li>Leonardo DiCaprio as Dom Cobb</li>
+                    <li>Joseph Gordon-Levitt as Arthur</li>
+                    <li>Elliot Page as Ariadne</li>
+                    <li>Tom Hardy as Eames</li>
+                </ul>
+            </section>
+            <section id="quote">
+                <h2>Quotes</h2>
+                <blockquote>
+                    "You mustn’t be afraid to dream a little bigger, darling."
+                </blockquote>
+            </section>
+        </div>
+        <aside>
+            <h3>Movie Details</h3>
+            <p><strong>IMDb Rating:</strong> 8.8/10</p>
+            <p><strong>Release Date:</strong> 2010</p>
+        </aside>
+    </main>
+    <footer>
+        Produced by: Christopher Nolan
+    </footer>
 </body>
-
 </html>
